--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Etch-a-sketch></title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-    <h1>Etch-a-sketch</h1>
-    <div id="buttons">
-
-    </div>
-    <div id="container">
-
-    </div>
-<script type="text/javascript" src="script.js"></script>
-</body>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Etch-a-sketch</h1>
+    </header>
+    <main>
+      <div id="buttons">
+        <button class="buttonfunc" id="color">Pick a colour:</button>
+        <button class="buttonfunc" id="rainbow">Rainbow mode</button>
+        <button class="buttonfunc" id="black">Black mode</button>
+        <button class="buttonfunc" id="eraser">Eraser</button>
+      </div>
+      <div id="container"></div>
+    </main>
+    <script type="text/javascript" src="script.js"></script>
+  </body>
 </html>
