--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
         <button class="buttonfunc" id="rainbow">Rainbow mode</button>
         <button class="buttonfunc" id="black">Black mode</button>
         <button class="buttonfunc" id="eraser">Eraser</button>
-        <div class="slidecontainer">
+        <div class="slidercontainer">
+          <p><span id="area"></span></p>
           <input
             type="range"
-            min="1x1"
-            max="64x64"
-            value="16x16"
+            min="1"
+            max="64"
+            value="16"
             class="slider"
             id="myRange"
           />
