--- a/index.html
+++ b/index.html
@@ -2,51 +2,44 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Etch-a-sketch></title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <script
-      src="https://kit.fontawesome.com/c32f7bdd46.js"
-      crossorigin="anonymous"
-    ></script>
+    <title>Etch-a-sketch</title>
+    <link
+      href="http://fonts.googleapis.com/css?family=Lato:400,700"
+      rel="stylesheet"
+      type="text/css"
+      rel="stylesheet"
+    />
+    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/c32f7bdd46.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <header>
-      <h1>Etch-a-sketch</h1>
+    <header class="header">
+      <h1 class="title">Etch-a-sketch</h1>
     </header>
-    <main>
-      <div id="buttons">
-        <input id="colorWheel" type="color" value="#333333">
-        <button class="buttonfunc" id="color">Pick a colour:</button>
-        <button class="buttonfunc" id="rainbow">Rainbow mode</button>
-        <button class="buttonfunc" id="black">Black mode</button>
-        <button class="buttonfunc" id="eraser">Eraser</button>
-        <div class="slidercontainer">
-          <p><span id="area"></span></p>
-          <input
-            type="range"
-            min="1"
-            max="64"
-            value="16"
-            class="slider"
-            id="myRange"
-          />
-        </div>
+    <main class="main">
+      <div class="settings">
+        <input id="colorPicker" type="color" value="#333333" />
+        <button id="colorBtn">Color mode</button>
+        <button id="rainbowBtn">Rainbow mode</button>
+        <button id="eraserBtn">Eraser</button>
+        <button id="clearBtn">Clear</button>
+        <div id="sizeValue" class="size-value">16 x 16</div>
+        <input id="sizeSlider" type="range" value="16" min="1" max="64" />
       </div>
-      <div id="container"></div>
+      <div id="grid" class="grid"></div>
     </main>
-    <footer>
+    <footer class="footer">
       <p>
-        Copyright K. Wojtkowiak for The Odin Project,
+        Copyright ©
         <script>
-          document.write(new Date().getFullYear());
+          document.write(new Date().getFullYear())
         </script>
+        kwojtkowiak
       </p>
-      <a href="https://github.com/kwojtkowiak" target="_blank">
-        <i class="fa-brands fa-square-github fa-bounce fa-xl"></i>
-      </a>
+      <a href="https://github.com/kwojtkowiak" target="_blank"> <i class="fab fa-github"></i></a>
     </footer>
-    <script type="text/javascript" src="script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
